k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: migros-service
spec:
  type: NodePort
  selector:
    app: migros-project
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30008  # NodePort için geçerli bir port
